--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://voice-analysis.tasknova.com/" />
     <meta property="og:title" content="Tasknova Voice Analysis - AI-Powered Call Analysis Platform" />
     <meta property="og:description" content="Tasknova's AI-powered Voice Analysis platform transforms call performance across industries. Trusted by HR agencies, real estate, customer support, banking, and business operations." />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/panchsil_logo.png.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Tasknova Voice Analysis" />
@@ -31,7 +31,7 @@
     <meta name="twitter:url" content="https://voice-analysis.tasknova.com/" />
     <meta name="twitter:title" content="Tasknova Voice Analysis - AI-Powered Call Analysis Platform" />
     <meta name="twitter:description" content="Tasknova's AI-powered Voice Analysis platform transforms call performance across industries. Trusted by HR agencies, real estate, customer support, banking, and business operations." />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="/panchsil_logo.png.jpg" />
     <meta name="twitter:site" content="@tasknova" />
     <meta name="twitter:creator" content="@tasknova" />
   </head>
