--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/panchsil_logo.png.jpg" />
+    <link rel="icon" type="image/png" href="/ceipal-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panchshil Voice Analysis - AI-Powered Call Analysis Platform</title>
-    <meta name="description" content="Panchshil's AI-powered Voice Analysis platform transforms call performance across industries. Trusted by HR agencies, real estate, customer support, banking, and business operations for detailed sentiment, engagement, and objection insights." />
-    <meta name="author" content="Panchshil" />
-    <meta name="keywords" content="Panchshil, AI call analysis, voice analysis, sentiment analysis, call performance, HR agencies, real estate, customer support, banking, business operations, lead qualification" />
+    <title>Ceipal Voice Analysis - AI-Powered Call Analysis Platform</title>
+    <meta name="description" content="Ceipal's AI-powered Voice Analysis platform transforms call performance across industries. AI Powered. People Driven. Trusted by HR agencies, staffing firms, and recruiters for detailed sentiment, engagement, and candidate insights." />
+    <meta name="author" content="Ceipal" />
+    <meta name="keywords" content="Ceipal, AI call analysis, voice analysis, sentiment analysis, call performance, HR agencies, staffing, recruiting, ATS, talent acquisition, candidate screening, interview analysis" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
@@ -19,22 +19,22 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://voice-analysis.panchshil.com/" />
-    <meta property="og:title" content="Panchshil Voice Analysis - AI-Powered Call Analysis Platform" />
-    <meta property="og:description" content="Panchshil's AI-powered Voice Analysis platform transforms call performance across industries. Trusted by HR agencies, real estate, customer support, banking, and business operations." />
-    <meta property="og:image" content="/panchsil_logo.png.jpg" />
+    <meta property="og:url" content="https://voice-analysis.ceipal.com/" />
+    <meta property="og:title" content="Ceipal Voice Analysis - AI-Powered Call Analysis Platform" />
+    <meta property="og:description" content="Ceipal's AI-powered Voice Analysis platform transforms call performance across industries. AI Powered. People Driven. Trusted by HR agencies, staffing firms, and recruiters." />
+    <meta property="og:image" content="/ceipal_logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:site_name" content="Panchshil Voice Analysis" />
+    <meta property="og:site_name" content="Ceipal Voice Analysis" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://voice-analysis.panchshil.com/" />
-    <meta name="twitter:title" content="Panchshil Voice Analysis - AI-Powered Call Analysis Platform" />
-    <meta name="twitter:description" content="Panchshil's AI-powered Voice Analysis platform transforms call performance across industries. Trusted by HR agencies, real estate, customer support, banking, and business operations." />
-    <meta name="twitter:image" content="/panchsil_logo.png.jpg" />
-    <meta name="twitter:site" content="@panchshil" />
-    <meta name="twitter:creator" content="@panchshil" />
+    <meta name="twitter:url" content="https://voice-analysis.ceipal.com/" />
+    <meta name="twitter:title" content="Ceipal Voice Analysis - AI-Powered Call Analysis Platform" />
+    <meta name="twitter:description" content="Ceipal's AI-powered Voice Analysis platform transforms call performance across industries. AI Powered. People Driven. Trusted by HR agencies, staffing firms, and recruiters." />
+    <meta name="twitter:image" content="/ceipal-twitter-card.jpg" />
+    <meta name="twitter:site" content="@ceipal" />
+    <meta name="twitter:creator" content="@ceipal" />
   </head>
 
   <body>
